2006-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPath.cs: Better MonoTODO description.
	* LinearGradientBrush.cs: Better MonoTODO description.

2006-08-10  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPath.cs: Fix unit tests wrt libgdiplus return value change.
	* PathGradientBrush.cs: Fix unit tests when running under Windows.

2006-08-07  Andrew Skiba <andrews@mainsof.com>

	* Matrix.jvm.cs: TARGET_JVM fix

2006-08-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPath.cs: Fix unit tests wrt libgdiplus return value change.
	* PathGradientBrush.cs: Fix unit tests wrt libgdiplus return value 
	changes.

2006-06-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPath.cs: Update/remove some MonoTODO on IsVisible methods.

2006-06-07  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPath.cs: IsOutlineVisible throws ArgumentNullException
	if a null pen is supplied. Update/remove some MonoTODO on 
	IsOutlineVisible methods.

2006-06-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPath.cs: Fix IsOutlineVisible wrt API signature change.

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPath.cs: Remove MonoTODO on GetBounds. For 1.x throw an
	OutOfMemoryException if Widen is called on an empty path.

2006-05-21  Sebastien Pouliot  <sebastien@ximian.com>

	* CombineMode.cs: Removed [Serializable] from 2.0 profile.
	* CompostingMode.cs: Removed [Serializable] from 2.0 profile.
	* CompostingQuality.cs: Removed [Serializable] from 2.0 profile.
	* CoordinateSpace.cs: Removed [Serializable] from 2.0 profile.
	* DashCap.cs: Removed [Serializable] from 2.0 profile.
	* DashStyle.cs: Removed [Serializable] from 2.0 profile.
	* FillMode.cs: Removed [Serializable] from 2.0 profile.
	* FlushIntention.cs: Removed [Serializable] from 2.0 profile.
	* HatchStyle.cs: Removed [Serializable] from 2.0 profile.
	* InterpolationMode.cs: Removed [Serializable] from 2.0 profile.